--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,33 @@
 {
-	"name": "actom/loisium",
-	"description": " An open source framework for extracting the data you need from websites. ",
-	"version": "0.0.1",
-	"keywords": [
-		"spider", "crawler"
-	],
-	"license": "Apache License 2.0",
-	"authors": [
-		{
-			"name": "actom",
-			"email": "i@actom.me"
-		}
-	],
-	"require": {
-		"php": ">=7.0"
-	},
-	"autoload": {
-		"psr-4": {
-			"loisium\\": "src/"
-		}
-	}
+  "name": "actom/loisium",
+  "description": " An open source framework for extracting the data you need from websites. ",
+  "version": "0.0.1",
+  "keywords": [
+    "spider",
+    "crawler"
+  ],
+  "license": "Apache License 2.0",
+  "authors": [
+    {
+      "name": "actom",
+      "email": "i@actom.me"
+    }
+  ],
+  "require": {
+    "php": ">=7.0",
+    "electrolinux/phpquery": "0.9.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6"
+  },
+  "autoload": {
+    "psr-4": {
+      "loisium\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "loisium\\Tests\\": "tests/"
+    }
+  }
 }
